# language-modelling

./: .gitignore  pyproject.toml
base_model/: layers.py  tiktoken_port.py  training_utils.py
scripts/: benchmark_base.py  train_base.py
